crates/forge/tests/e2e/snapshots/gas_report/main__e2e__gas_report__snap_gas_report_no_abi@2.18.0.snap
---
source: crates/forge/tests/e2e/gas_report.rs
expression: stdout
---



[PASS] debugging_no_abi_integrationtest::test_trace::test_nested_safe_call_no_abi (l1_gas: ~0, l1_data_gas: ~96, l2_gas: ~374240)
╭-------------------------------------------------------------------+--------+--------+--------+---------+---------╮
| CallerContract Contract                                           |        |        |        |         |         |
+==================================================================================================================+
| Function Name                                                     | Min    | Max    | Avg    | Std Dev | # Calls |
|-------------------------------------------------------------------+--------+--------+--------+---------+---------|
| 0x32564d7e0fe091d49b4c20f4632191e4ed6986bf993849879abfef9465def25 | 0      | 0      | 0      | 0       | 1       |
|-------------------------------------------------------------------+--------+--------+--------+---------+---------|
| call                                                              | 107600 | 107600 | 107600 | 0       | 1       |
╰-------------------------------------------------------------------+--------+--------+--------+---------+---------╯
