crates/forge/tests/e2e/snapshots/gas_report/main__e2e__gas_report__snap_multiple_contracts_and_constructor@2.16.0.snap
---
source: crates/forge/tests/e2e/gas_report.rs
expression: stdout
---



[PASS] simple_package_with_cheats_integrationtest::contract::call_and_invoke_proxy (l1_gas: ~0, l1_data_gas: ~288, l2_gas: ~1334740)
╭------------------------+-------+-------+-------+---------+---------╮
| HelloStarknet Contract |       |       |       |         |         |
+====================================================================+
| Function Name          | Min   | Max   | Avg   | Std Dev | # Calls |
|------------------------+-------+-------+-------+---------+---------|
| get_block_number       | 15780 | 15780 | 15780 | 0       | 2       |
╰------------------------+-------+-------+-------+---------+---------╯

╭-----------------------------+--------+--------+--------+---------+---------╮
| HelloStarknetProxy Contract |        |        |        |         |         |
+============================================================================+
| Function Name               | Min    | Max    | Avg    | Std Dev | # Calls |
|-----------------------------+--------+--------+--------+---------+---------|
| constructor                 | 49620  | 49620  | 49620  | 0       | 1       |
|-----------------------------+--------+--------+--------+---------+---------|
| get_block_number            | 133350 | 133350 | 133350 | 0       | 2       |
╰-----------------------------+--------+--------+--------+---------+---------╯
