crates/forge/tests/e2e/snapshots/gas_report/main__e2e__gas_report__snap_multiple_contracts_and_constructor@2.21.0.snap
---
source: crates/forge/tests/e2e/gas_report.rs
expression: stdout
---



[PASS] simple_package_with_cheats_integrationtest::contract::call_and_invoke_proxy (l1_gas: ~0, l1_data_gas: ~288, l2_gas: ~1346760)
╭------------------------+-------+-------+-------+---------+---------╮
| HelloStarknet Contract |       |       |       |         |         |
+====================================================================+
| Function Name          | Min   | Max   | Avg   | Std Dev | # Calls |
|------------------------+-------+-------+-------+---------+---------|
| get_block_number       | 13610 | 13610 | 13610 | 0       | 2       |
╰------------------------+-------+-------+-------+---------+---------╯

╭-----------------------------+--------+--------+--------+---------+---------╮
| HelloStarknetProxy Contract |        |        |        |         |         |
+============================================================================+
| Function Name               | Min    | Max    | Avg    | Std Dev | # Calls |
|-----------------------------+--------+--------+--------+---------+---------|
| constructor                 | 63850  | 63850  | 63850  | 0       | 1       |
|-----------------------------+--------+--------+--------+---------+---------|
| get_block_number            | 136210 | 136210 | 136210 | 0       | 2       |
╰-----------------------------+--------+--------+--------+---------+---------╯
